Auto phone gap detect, fix some bugs

--- a/assets/www/res/style.css
+++ b/assets/www/res/style.css
@@ -6,7 +6,7 @@
  * Ahd Mobile WebApp Framework
  *
  */
- 
+
 @charset "UTF-8";
 
 * {
@@ -44,22 +44,23 @@ div.fixfooter {
 	left:0;
 	right:0;
 	overflow:hidden;
-	/*background-size:100% 100%;*/
+	background-size:100% 100%;
 	background-repeat:no-repeat;
 	background-position:left top;
-	opacity:0.9;
 }
 
 div.fixheader {
 	top:0;
- 	height:48px;
+ 	height:55px;
+	opacity:0.95;
 	background-image:url('header.jpg');
 	
 }
 
 div.fixfooter {
 	bottom:0;
- 	height:56px;
+ 	height:55px;
+	opacity:0.9;
 	background-image:url('footer.jpg');
 }
 
